--- a/themes/landscape/source/css/clean-blog.css
+++ b/themes/landscape/source/css/clean-blog.css
@@ -8,7 +8,6 @@ body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
   color: #404040;
-	padding-top: 50px;
 }
 p {
   line-height: 1.5;
